Se estructura build.gradle y application para el acceso de la BD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,9 @@ spring.application.name=api-franquicias-webflux
 
 # MongoDB Reactive - URI de conexión (Spring Data MongoDB Reactive, no bloqueante)
 # Base de datos: franquicias. Ejecutar MongoDB en local: docker run -d -p 27017:27017 mongo
-spring.data.mongodb.uri=mongodb://localhost:27017/franquicias
+spring.mongodb.uri=mongodb://admin:password123@localhost:27017/franquicias?authSource=admin
+
+
+# OpenAPI / Swagger UI (springdoc): http://localhost:8080/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
