Se realizan ajutes, se implementa record en los dtos y se hacen ajustes comentarios y demas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-# Nombre de la aplicación
+# Nombre de la aplicacion
 spring.application.name=api-franquicias-webflux
 
-# MongoDB Reactive - URI de conexión (Spring Data MongoDB Reactive, no bloqueante)
+# MongoDB Reactive - URI de conexion (Spring Data MongoDB Reactive, no bloqueante)
 # Base de datos: franquicias. Ejecutar MongoDB en local: docker run -d -p 27017:27017 mongo
 spring.mongodb.uri=mongodb://admin:password123@localhost:27017/franquicias?authSource=admin
 
